--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="black">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./public/x-clone-icon.png" />
+    <link rel="icon" type="image" href="/x-clone-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>X Clone</title>
   </head>
